Use toList() directly.